--- a/src/notebooks/data_analysis.ipynb
+++ b/src/notebooks/data_analysis.ipynb
@@ -266,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_clean_ASI",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -280,9 +280,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
