Changed structure of files, correted imports

--- a/src/data_analysis.ipynb
+++ b/src/data_analysis.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import import_data_module\n",
+    "from download import import_data_module\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "data = import_data_module.import_dataframe_from_csv(\"../model_data/CrabAgePrediction.csv\")\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
