--- a/raw_pipeline/data_analysis.ipynb
+++ b/raw_pipeline/data_analysis.ipynb
@@ -16,7 +16,7 @@
     "from download import import_data_module\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "data = import_data_module.import_dataframe_from_csv(\"../model_data/CrabAgePrediction.csv\")\n",
+    "data = import_data_module.import_dataframe_from_csv(\"../data/CrabAgePrediction.csv\")\n",
     "\n",
     "original_rows_number = len(data)"
    ]
