--- a/raw_pipeline/model_eval.ipynb
+++ b/raw_pipeline/model_eval.ipynb
@@ -30,7 +30,7 @@
     "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "data = import_data_module.import_dataframe_from_csv(\"../model_data/CrabAgePrediction.csv\")\n",
+    "data = import_data_module.import_dataframe_from_csv(\"../data/CrabAgePrediction.csv\")\n",
     "data_cleaned = data_cleaner_module.clean_Data(data)\n",
     "\n",
     "data_cleaned.reset_index(drop=True, inplace=True)"
