--- a/raw_pipeline/pipeline.ipynb
+++ b/raw_pipeline/pipeline.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crab_data = import_data_module.import_dataframe_from_csv(path=\"../model_data/CrabAgePrediction.csv\")"
+    "crab_data = import_data_module.import_dataframe_from_csv(path=\"../data/CrabAgePrediction.csv\")"
    ]
   },
   {
